# evagpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bigram.py  environment.yml  environment_jax.yml  gpt.py  pyproject.toml
.github/workflows/: pre-commit.yml
.trunk/actions/trunk-single-player-auto-upgrade/: 2026-01-19-03-57-21.568.yaml
.trunk/actions/trunk-whoami/: 2026-01-19-03-57-21.560.yaml
evagpt/: gpt.py  gpt2.py
evagpt/data/: utils.py
evagpt/utils/: logging_utils.py
experiments/: flax_train_gpt2.py  train_gpt2.py  train_gpt2_owt.py
experiments/archived/: jax_train_gpt2.py
experiments/data/language_modeling/: get_dataset.py  jax_dataloader.py  wikitext_datamodule.py
notebooks/: hf_dataset.ipynb  hf_wiki.ipynb  load_owt.ipynb  template.ipynb  workspace.ipynb
sandbox/gary/: decompose_einsum.py  environment.yml  eqx_gpt.py  hodlr_projection.py  test_lightning.py  train_arrow_jax.py  try_all_reduce.py  try_gpt2.py  wiki_ds.py
scripts/: preprocess_owt.py  train_gpt2.py  train_gpt2.sh  train_gpt2_hodlr.sh  train_gpt2_single_gpu.py  train_gpt_owt.sh
src/: flax_gpt2.py  gpt2.py  jax_gpt2.py  try_gpt2.py
src/linear/: hodlr.py  hodlr_permutation.py  hodlr_recursive.py  utils.py
