[project]
name = "evagpt"
version = "0.1.0"
requires-python = ">=3.14"

# ---------------- Black ----------------
[tool.black]
line-length = 100
target-version = ["py313"]

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
  "F722", # Ignore complaining about jaxtyping
]

[tool.ruff.lint.isort]
known-first-party = ["evagpt"]

[tool.ruff.lint.per-file-ignores]
"evagpt/__main__.py" = ["E402"]

# ---------------- mypy ----------------
[tool.mypy]
python_version = "3.14"
strict = false

warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

disallow_untyped_defs = false
disallow_incomplete_defs = false

check_untyped_defs = true
implicit_optional = false

pretty = true
show_error_codes = true

# Allow gradual typing (important for personal projects)
ignore_missing_imports = true

[tool.pylint.typecheck]
generated-members = ["sh"]

# ---------------- Commitizen ----------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = false
